static/scss/partials/onboarding.scss
// Protocol
@import "libs/protocol/css/templates/multi-column.scss";
@import "libs/protocol/css/components/zap.scss";

.c-onboarding {
    border-radius: $border-radius-md;
    border: 1px solid $color-light-gray-40;
    padding: $spacing-lg;
    margin-bottom: $spacing-lg;

    h2 {
        @include text-title-2xs;
        color: $color-black;
        margin-bottom: $spacing-lg;
    }
}

.c-onboarding-steps {
    list-style: none;
    margin: 0;
    padding: 0;
    gap: $spacing-lg;
}

.c-onboarding-step {
    background-color: $color-white;
    border-radius: $border-radius-md;
    padding: $spacing-lg;
    margin-bottom: $spacing-lg;
    display: flex;
    flex-direction: column;

    @media #{$mq-md} {
        margin-bottom: 0;
    }

}

.c-onboarding-step-number {
    background: url("/static/images/dashboard-onboarding/shield.svg") center center no-repeat;
    background-size: contain;
    width: 100%;
    height: 45px;
    line-height: 45px;
    margin: 0 auto $spacing-md;
    
    &::after {
        content: attr(data-number);
        display: block;
        font-weight: bold;
        font-size: 1rem;
        text-align: center;
        color: $color-light-gray-70;
    }
}

.c-onboarding-step-copy {
    @include text-body-sm;
    text-align: center;
}

.c-onboarding-step-action, .c-onboarding-step-graphic {
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

// Premium 

.c-premium-onboarding {
    position: relative;

    &.is-hidden, .is-hidden {
        display: none;
    }

    .mzp-l-content {
        padding: $spacing-lg $spacing-lg;
        position: initial;
    }
}

.c-premium-onboarding-headlines {
    text-align: center;
    margin-bottom: $spacing-xl;

    h1 {
        color: $color-purple-50;

        @include text-title-lg;
        margin-bottom: $spacing-md;
    }

    h2 {
        color: $color-black;

        @include text-title-xs;
    }
}

.c-premium-onboarding-content {
    max-width: $content-lg;
    margin: 0 auto;

    @media #{$mq-md} {
        display: flex;
        align-items: center;
        gap: $spacing-xl;
    }
}

.c-premium-onboarding-content-image {
    width: 100%;
    max-width: $content-xs;
    margin: 0 auto $spacing-xl;

    @media #{$mq-md} {
        margin-bottom: 0;
    }
}

.c-premium-onboarding-dismiss {
    position: absolute;
    right: 0;
    top: 0;
    background: none;
    border: 0;
    appearance: none;
    margin: 0;
    padding: 0;
    cursor: pointer;
    display: block;
    transition: transform .3s ease-in;

    &:hover {
        transform: scale(1.05);
    }
    
    img {
        width: 2rem;
        max-width: none;
        display: block;
    }
}

.c-premium-onboarding-content-description {

    strong {
        display: block;

        @include text-body-lg;
    }

    .mzp-u-list-styled li {
        margin-bottom: $spacing-md;
    }

    li::marker {
        color: $color-yellow-50;
    }

    button {
        appearance: none;
        text-decoration: underline;
        background: none;
        border: 0;
        cursor: pointer;

        @include text-body-md;

        &:hover {
            color: $color-purple-50;
        }
    }
}

// Multi-part Premium Onboarding
.is-premium-onboarding {

    .c-multipart-premium-onboarding {
        display: block;

        @media #{$mq-md} {
            display: flex;
        }
    }
    
    .dashboard-mpp-promo, .domain-alias-dashboard, .main-list, .mpp-dashbaord-header {
        display: none;
    }
}

.c-multipart-premium-onboarding {
    display: none;
    max-width: $content-lg;
    margin-left: auto;
    margin-right: auto;
    position: relative;

    @media #{$mq-md} {
        // 150px is an approx. size of the header and footer combined
        min-height: calc(100vh - 150px);
        flex-direction: column;
        justify-content: space-between;
    }

    .c-button-as-text {
        cursor: pointer;
        appearance: none;
        background-color: transparent;
        border: none;
        color: $color-informational;

        @include text-body-sm;
        margin-bottom: $spacing-sm;
        
        &.t-skip-button {
            margin-bottom: 0;
        }

        &:hover {
            color: $color-informational-hover;
        }
    }

    .c-premium-onboarding-content-image, .c-premium-onboarding-content-description {
        @media #{$mq-md} {
            width: 50%;
            max-width: none;
        }
    }



    .c-premium-onboarding-headlines {

        h1 {
            color: $color-purple-50;

            @include text-title-sm;
            margin-bottom: $spacing-md;
        }

        h2 {
            @include text-title-3xs;
        }

        .c-premium-onboarding-content-description {
            @include text-body-lg;
        }
    }

    
}



.c-premium-onboarding-step {
    display: none;

    &.is-visible {
        display: block;
    }
}

// Step 2: Register custom subdomain 
.c-premium-onboarding-step-2 {

    samp {
        @include text-title-2xs;
        display: block;
        color: $color-grey-30;
        margin-bottom: $spacing-lg;

        span {
            display: inline-block;
            color: $color-purple-50;
            font-weight: 700;
        }

        @media #{$mq-md} {
            @include text-title-3xs;
        }
        @media #{$mq-lg} {
            @include text-title-2xs;
        }
    }
}

// Step 3: Install add-on

.c-premium-onboarding-step-3 {

    .c-premium-onboarding-install-addon a {
        display: none;

        @media #{$mq-md} {
            display: inline-block;
        }
        // TODO: Add query that user is on desktop Firefox to prompt install of add-on
    }
}

.c-premium-onboarding-action-step-3 {

    .c-button-as-text {
        display: none;

        @media #{$mq-md} {
            display: inline-block;
        }
    }

    .mzp-c-button {
        display: inline-block;

        @media #{$mq-md} {
            display: none;
        }
    }
}


firefox-private-relay-addon[data-addon-installed="true"] + firefox-private-relay-addon-data + main {

    .c-premium-onboarding-step-3 {
        
        .c-premium-onboarding-install-addon {
            display: none;
        }
    
        .c-premium-onboarding-action-completed {
            display: inline-flex;
        }
        
    }

    .c-premium-onboarding-action-step-3 {

        .mzp-c-button {
            display: inline-block;
        }
        
        .c-button-as-text {
            display: none;
        }
    }
}


// Logic to hide prompts to install add-on on browsers that don't support it. 
.is-not-addon-compatible {

    .c-premium-onboarding-install-addon a {
        display: none;
    }

    .c-premium-onboarding-action-step-3 {

        .c-button-as-text {
            display: none;
        }

        .mzp-c-button {
            display: inline-block;
        }
    }
}

.c-premium-onboarding-action-completed {
    padding: $spacing-md;
    padding-inline-end: $spacing-lg;
    background-color: $color-white;
    display: none;
    align-items: center;
    border-radius: $border-radius-md;
    width: auto;

    samp {
        margin-bottom: 0;
        color: $color-informational;
        max-width: 100%;
        word-break: break-all;

        @include text-title-3xs;
    }

    &.is-visible {
        display: inline-flex;
    }

    img {
        margin-right: $spacing-sm;
    }
}

// Progress Bar
.c-premium-onboarding-progress {
    background-color: $color-grey-05;
    width: 100%;
    text-align: center;
    position: sticky;
    z-index: 2;
    bottom: 0;
    box-shadow: $box-shadow-sm;

    @media #{$mq-md} {
        box-shadow: none;
        position: static;
        bottom: auto;
    }

    .c-premium-onboarding-actions-wrapper {
        padding-bottom: $spacing-sm;

        @media #{$mq-md} {
            padding-bottom: $spacing-lg;
        }
    }

    .c-premium-onboarding-actions {
        display: none;
        text-align: center;
        padding-top: 0;
        padding-bottom: $spacing-md;

        &.is-visible {
            display: block;
        }
        
        .mzp-c-button.is-hidden {
            display: none;
        }
    }
    
}

.c-premium-onboarding-progress-bar {
    display: flex;
    width: 100%;
    max-width: $content-md;
    margin: 0 auto $spacing-sm;
    gap: $spacing-sm;
    

    @media #{$mq-md} {
        margin-bottom: $spacing-md;
    }
    
    .c-premium-onboarding-progress-bar-item {
        width: 100%;
        color: $color-grey-20;
        text-align: center;
        transition: color .2s ease-out;
        
        span {
            display: block;
            height: 5px;
            background-color: $color-grey-20;
            margin-bottom: $spacing-xs;
            box-shadow: inset 0 0 0 0 $color-violet-30;
            transition: box-shadow 1s ease-out, color .2s ease-out;
            
        }
        
        &.is-completed {
            color: $color-violet-30;

            span {
                box-shadow: inset 300px 0 0 0 $color-violet-30;
            }
        }
    }
}

